--- a/glushkovizer/doc/references.bib
+++ b/glushkovizer/doc/references.bib
@@ -2,8 +2,8 @@
   author       = {Caron, Pascal},
   title        = {Cours de théorie des langages},
   note         = {Document interne à l'Université de Rouen},
-  year         = 2023,
-  month        = 12,
+  year         = {2023},
+  month        = {12},
   howpublished = {Non publié}
 }
 
@@ -40,4 +40,15 @@
   address   = {Reading, Mass.},
   isbn      = {0201029553; 9780201029550},
   language  = {English}
+}
+
+@article{DBLP:journals/tcs/CaronZ00,
+  author  = {Pascal Caron and
+             Djelloul Ziadi},
+  title   = {Characterization of Glushkov automata},
+  journal = {Theor. Comput. Sci.},
+  volume  = {233},
+  number  = {1-2},
+  pages   = {75--90},
+  year    = {2000}
 }
